# whidl

./: .gitignore  .npmrc  And.hdl  CODEOWNERS  Cargo.toml  README.md  TriangleROM.hdl  index.js  package-lock.json  package.json  package.json.publish  remote_build.sh  test  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: modelsim.sh  nvm.sh
.github/workflows/: Dockerfile  build.yml  publish-docs.yml  release-package.yml  rust.yml  semgrep.yml  test.yml
book/src/: SUMMARY.md  roms.md  whidl-test.md
docs/: README.md  book.toml  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
docs-old/src/: SUMMARY.md  assignment.md
docs/src/: SUMMARY.md  app.tsx  basics.md  hdl-language.md  index.tsx  language-extensions.md  loops.md  nand2tetris-vhdl.md  nav.tsx  notes.tsx  whidl.md
docs/src/pages/: assignment.mdx  generics.mdx  home.mdx  install.mdx  loops.mdx  synth-vhdl.mdx  truth-tables.tsx  usage.mdx
resources/quartus/: nand.vhdl  test.tcl
resources/tests/arm/: Add16.hdl  Barrel4.hdl  Bit.hdl  CPU.cmp  CPU.hdl  CPU.tst  LoadStoreSingleOp.hdl  LoadStoreSingleReg.hdl  Mux.hdl  Mux4Way.hdl  Mux8Way.hdl  Mux8Way3.cmp  Mux8Way3.tst  MuxGen.hdl  OpsSASMC.cmp  OpsSASMC.hdl  OpsSASMC.tst  RAM8.hdl  SiASMCOp.hdl
src/: busmap.rs  error.rs  expr.rs  lib.rs  logisim.rs  main.rs  modelsim.rs  parser.rs  rom.rs  scanner.rs  simulator.rs  test_parser.rs  test_scanner.rs  test_script.rs  vhdl.rs  vhdl_testbench.rs
src/opt/: dedupe.rs  mod.rs  optimization.rs  portmap_dedupe.rs  sequential.rs
(+43 files in other folders)
